--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ jmespath==0.9.5
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.1.1
-pkg-resources==0.0.0
+#pkg-resources==0.0.0
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pylint==2.4.4
